# payload-command-protocol

./: command-listener-pre.service  command-listener.service  commands.c  commands.h  heartbeat-pre.service  heartbeat.service  heartbeat.sh  listener.c  meson.build  sha256_utils.c
